update github yaml and simplify pom