@@ -29,8 +29,9 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <mainClass>com.app.tax.cli.App</mainClass>
-        <artifactsDir>target</artifactsDir>
-        <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+        <artifactsDir>target/distributions</artifactsDir>
+        <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco.xml
+        </sonar.coverage.jacoco.xmlReportPaths>
         <sonar.organization>i-denipermana</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 
@@ -149,40 +150,6 @@
                 <version>3.1.2</version>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.22.2</version>
-                <configuration>
-                    <argLine>
-                        --illegal-access=permit
-                    </argLine>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.graalvm.nativeimage</groupId>
-                <artifactId>native-image-maven-plugin</artifactId>
-                <version>21.2.0</version>
-                <configuration>
-                    <mainClass>${mainClass}</mainClass>
-                    <imageName>${appName}</imageName>
-                    <buildArgs>
-                        --no-fallback
-                        --report-unsupported-elements-at-runtime
-                        --allow-incomplete-classpath
-                        -H:+ReportExceptionStackTraces
-                    </buildArgs>
-                    <skip>false</skip>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>native-image</goal>
-                        </goals>
-                        <phase>install</phase>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>appassembler-maven-plugin</artifactId>
                 <version>1.10</version>
@@ -284,30 +251,20 @@
                         <extensions>true</extensions>
                         <executions>
                             <execution>
+                                <id>test-native</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                            </execution>
+                            <execution>
                                 <id>build-native</id>
+                                <phase>package</phase>
                                 <goals>
                                     <goal>build</goal>
                                 </goals>
-                                <phase>package</phase>
-                            </execution>
-                            <execution>
-                                <id>release-native</id>
-                                <goals>
-                                    <goal>release</goal>
-                                </goals>
-                                <phase>release</phase>
                             </execution>
                         </executions>
-                        <configuration>
-                            <imageName>${appName}-${project.version}</imageName>
-                            <mainClass>${mainClass}</mainClass>
-                            <buildArgs>
-                                <buildArg>--allow-incomplete-classpath</buildArg>
-                                <buildArg>--no-fallback</buildArg>
-                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
-                                <buildArg>--verbose</buildArg>
-                            </buildArgs>
-                        </configuration>
                     </plugin>
                 </plugins>
             </build>
@@ -366,43 +323,18 @@
                                 </release>
                                 <distributions>
                                     <tcalc>
-                                        <name>${appName}</name>
                                         <type>NATIVE_IMAGE</type>
                                         <artifacts>
                                             <artifact>
-                                                <path>
-                                                    {{artifactsDir}}/{{distributionName}}-{{projectVersion}}-linux-x86_64.tar.gz
-                                                </path>
-                                                <transform>
-                                                    artifacts/{{distributionName}}-{{projectEffectiveVersion}}-linux-x86_64.tar.gz
-                                                </transform>
+                                                <path>{{artifactsDir}}/{{distributionName}}-{{projectVersion}}-linux-x86_64.tar.gz</path>
                                                 <platform>linux-x86_64</platform>
                                             </artifact>
                                             <artifact>
-                                                <path>
-                                                    {{artifactsDir}}/{{distributionName}}-{{projectVersion}}-linux-x86_64.zip
-                                                </path>
-                                                <transform>
-                                                    artifacts/{{distributionName}}-{{projectEffectiveVersion}}-linux-x86_64.zip
-                                                </transform>
-                                                <platform>linux-x86_64</platform>
-                                            </artifact>
-                                            <artifact>
-                                                <path>
-                                                    {{artifactsDir}}/{{distributionName}}-{{projectVersion}}-windows-x86_64.zip
-                                                </path>
-                                                <transform>
-                                                    artifacts/{{distributionName}}-{{projectEffectiveVersion}}-windows-x86_64.zip
-                                                </transform>
+                                                <path>{{artifactsDir}}/{{distributionName}}-{{projectVersion}}-windows-x86_64.zip</path>
                                                 <platform>windows-x86_64</platform>
                                             </artifact>
                                             <artifact>
-                                                <path>
-                                                    {{artifactsDir}}/{{distributionName}}-{{projectVersion}}-osx-x86_64.zip
-                                                </path>
-                                                <transform>
-                                                    artifacts/{{distributionName}}-{{projectEffectiveVersion}}-osx-x86_64.zip
-                                                </transform>
+                                                <path>{{artifactsDir}}/{{distributionName}}-{{projectVersion}}-osx-x86_64.zip</path>
                                                 <platform>osx-x86_64</platform>
                                             </artifact>
                                         </artifacts>
